# Glucose_Monitoring

./: .gitignore  CMakeLists.txt  ReadmeEN.txt  main.c  main.cpp
lib/Config/: DEV_Config.cpp  Debug.h
lib/Fonts/: font12CN.c  font24CN.c
lib/GImage/: CMakeLists.txt  EPD_Test.h  ImageData.cpp  ImageData.h
lib/GUI/: GUI_Paint.h
lib/Menu/: CMakeLists.txt  menu.cpp  menu.hpp
